--- a/node/src/views/admin/pages/products/detailCategory.pug
+++ b/node/src/views/admin/pages/products/detailCategory.pug
@@ -1,6 +1,7 @@
 extends ../../layouts/default.pug
 include ../../mixins/alert.pug
 
+
 block main
     .container.mt-5
         .row.justify-content-center
@@ -56,8 +57,7 @@ block main
                             href=`${prefixAdmin}/products-category`
                             style="background-color: blue;"
                         ) Quay lại
-    style.
-        .bg-gradient-primary-to-secondary {
-            background: linear-gradient(90deg,rgb(204, 223, 78) 0%,rgb(28, 197, 200) 100%);
-        }
-    script(src="/admin/js/product.js")
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css")
+ 
+    script(src="/admin/js/products.js")
+    script(src="/admin/js/script.js")
