--- a/node/src/views/admin/pages/products/createCategory.pug
+++ b/node/src/views/admin/pages/products/createCategory.pug
@@ -1,6 +1,6 @@
 extends ../../layouts/default.pug
 include ../../mixins/alert.pug
-include ../../mixins/select-tree
+include ../../mixins/select-tree.pug
 block main
   +alertError(5000)
   .container.mt-5
