--- a/node/src/views/admin/pages/products/create.pug
+++ b/node/src/views/admin/pages/products/create.pug
@@ -1,6 +1,6 @@
 extends ../../layouts/default.pug
 include ../../mixins/alert.pug
-
+include ../../mixins/select-tree.pug
 block main
   +alertError(5000)
   .container.mt-5
@@ -30,6 +30,17 @@ block main
                   .form-group
                     label(for="title") Tiêu đề
                     input(type="text", class="form-control", id="title", name="title", placeholder="Nhập tiêu đề sản phẩm ", required)
+                .col-md-6
+                  .form-group
+                    label(for="product_category_id") Danh mục 
+                    select(
+                      class="form-control"
+                      id="product_category_id"
+                      name="product_category_id"
+                    )
+                      option(value="") -- chọn danh mục cha --
+                      if(category)
+                        +select-tree(category)
                 .col-md-6
                   .form-group
                     label(for="sku") SKU
