thêm trang phân nhóm quyền

--- a/node/src/views/admin/patirals/header.pug
+++ b/node/src/views/admin/patirals/header.pug
@@ -22,6 +22,8 @@ header.header
                 a.dropdown-item(href=`${prefixAdmin}/products`) Danh sách sản phẩm 
               li
                 a.dropdown-item(href=`${prefixAdmin}/products-category`) Danh mục sản phẩm
+              li 
+                a.dropdown-item(href=`${prefixAdmin}/roles`) Nhóm quyền
   style.
     .navbar-nav .nav-link {
       transition: background 0.2s, color 0.2s;
