--- a/node/src/views/admin/patirals/header.pug
+++ b/node/src/views/admin/patirals/header.pug
@@ -24,6 +24,8 @@ header.header
                 a.dropdown-item(href=`${prefixAdmin}/products-category`) Danh mục sản phẩm
               li 
                 a.dropdown-item(href=`${prefixAdmin}/roles`) Nhóm quyền
+              li 
+                a.dropdown-item(href=`${prefixAdmin}/roles/permissions`) Phân quyền
   style.
     .navbar-nav .nav-link {
       transition: background 0.2s, color 0.2s;
