--- a/node/src/views/admin/pages/accounts/create.pug
+++ b/node/src/views/admin/pages/accounts/create.pug
@@ -105,4 +105,4 @@ block main
         .form-group.mt-4
           button.btn.btn-primary.btn-lg.w-100(type="submit")
             i.fas.fa-save.mr-2
-            | Lưu lại
+            | Thêm tài khoản
